# algorithm-toolbox-coursera

./: README.md
week1/: .clang-format  CMakeLists.txt
week1/Cplusplus/src/sum-of-two-digits/: aplusb.cpp
week1/Python/sum-of-two-digits/: aplusb.py  max-pair-wise-product.py
week1/src/max-pair-wise-product/: max_pairwise_product.cpp
week1/src/sum-of-two-digits/: aplusb.cpp
week2/: CMakeLists.txt
week2/Cplusplus/src/2_last_digit_of_fibonacci_number/: fibonacci_last_digit.cpp
week2/Cplusplus/src/7_last_digit_of_the_sum_of_fibonacci_numbers_again/: fibonacci_partial_sum.cpp
week2/Python/7_last_digit_of_the_sum_of_fibonacci_numbers_again/: __init__.py
week2/src/1_fibonacci_number/: fibonacci.cpp
week2/src/3_greatest_common_divisor/: gcd.cpp
week2/src/4_least_common_multiple/: lcm.cpp
week2/src/5_fibonacci_number_again/: fibonacci_huge.cpp
week2/src/6_last_digit_of_the_sum_of_fibonacci_numbers/: fibonacci_sum_last_digit.cpp
week2/src/8_last_digit_of_the_sum_of_squares_of_fibonacci_numbers/: fibonacci_sum_squares.cpp
week3/Cplusplus/: CMakeLists.txt
week3/Cplusplus/src/2_maximum_value_of_the_loot/: fractional_knapsack.cpp
week3/Python/3_car_fueling/: car_fueling.cpp
week3/Python/7_maximum_salary/: largest_number.py
week3/src/1_money_change/: change.cpp
week3/src/2_maximum_value_of_the_loot/: fractional_knapsack.cpp
week4/: CMakeLists.txt
week4/src/1_binary_search/: binary_search.cpp
week5/: CMakeLists.txt
week6/: CMakeLists.txt
